--- a/app/views/pages/soon.html.erb
+++ b/app/views/pages/soon.html.erb
@@ -2,9 +2,10 @@
   <section id="section1" class="cd-section soon">
     <div class="container justify-content-center">
       <div class="row justify-content-center">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/eqcss/1.5.0/EQCSS-polyfills.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/eqcss/1.5.0/EQCSS.min.js"></script>
         <h1 class="title-soon">First Opening in 2020 <br> Paris</h1>
       </div>
     </div>
   </section><!-- cd-section -->
-
 
