--- a/app/assets/stylesheets/components/_experience.scss
+++ b/app/assets/stylesheets/components/_experience.scss
@@ -5,7 +5,7 @@
 }
 
 .soon {
-  background-image: url("./geode.jpg");
+  background-image: url("./geode.png");
   background-size: cover;
   padding: 0px !important;
 }
