--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -1,5 +1,5 @@
 .btn-primary {
-  font-size: 20px;
+  font-size: 1.25rem;
   padding: 10px;
   background-color: $blue;
   border: 1px solid white;
@@ -40,7 +40,7 @@
 }
 
 .btn-danger {
-  font-size: 20px;
+  font-size: 1.25rem !important;
   padding: 10px;
   font-color: tomato !important;
   border: 1px solid tomato;
@@ -56,4 +56,8 @@
   a {
     color: $blue;
   }
+}
+
+.btn {
+  font-size: 1.25rem !important;
 }
