--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -18,7 +18,7 @@ $danger:     $red;
 $warning:    $orange;
 
 // Buttons & inputs' radius
-$border-radius:    4px;
+$border-radius:    0px;
 $border-radius-lg: 4px;
 $border-radius-sm: 4px;
 
@@ -26,6 +26,6 @@ $border-radius-sm: 4px;
 
 .btn-primary {
   padding: 10px;
-  font-size: 15px;
+  font-size: 1.25rem;
 
 }
