--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -20,10 +20,12 @@
 
 #message_name {
   background-color: transparent;
+  color: white;
 }
 
 #message_email {
   background-color: transparent;
+  color: white;
 }
 
 .message_body {
