--- a/app/views/pages/soon.html.erb
+++ b/app/views/pages/soon.html.erb
@@ -1,10 +1,8 @@
 <%= content_for(:navbar_class, "navbar-home") %>
-  <section id="section1" class="cd-section soon">
-    <div class="container justify-content-center">
-      <div class="row justify-content-center">
-        <h1 class="title-soon">First Opening in 2020 <br> Paris</h1>
-      </div>
-    </div>
-  </section>
+
+
+  <img src="../assets/paris.jpg" alt="" class="image">
+
+<h1 class="text justifu-content-center">Paris, 2020</h1>
 <!-- cd-section -->
 
