--- a/app/assets/stylesheets/components/_sections.scss
+++ b/app/assets/stylesheets/components/_sections.scss
@@ -59,7 +59,7 @@
 }
 
 .section2-articles {
-  background-color: white !important;
+  background-color: $blue !important;
 }
 
 .section3-articles {
