--- a/app/assets/stylesheets/components/_soon.scss
+++ b/app/assets/stylesheets/components/_soon.scss
@@ -26,7 +26,7 @@
     white-space: nowrap;
     text-transform: uppercase;
     color: #fff;
-    background-color: #000;
+    background-color: $blue;
     mix-blend-mode: multiply;
     opacity: 0;
     animation: fadeInText 3s 2s ease-out forwards;
