--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -48,9 +48,9 @@
       </div>
     <div class="row d-flex justify-content-center align-items-center mt-5" style=" height: 28%">
           <ul class="d-flex flex-column article-list text-left">
-            <% @articles.each do |article| %>
+            <% @articles.first(4).each do |article| %>
               <li>
-                <h3><%= link_to article.title, article_path(article) %> <p>(<%= article.date.strftime("%d of %B, %Y") %>)</p></h3>
+                <h4><%= link_to article.title, article_path(article) %> <p>(<%= article.date.strftime("%d of %B, %Y") %>)</p></h4>
               </li>
 
 
@@ -66,51 +66,51 @@
 <section id="section2" class="cd-section section2-articles">
   <div class="container flex-column justify-content-center mb-5 mt-5">
     <div class="row flex-column pb-5 mb-5">
-      <h1 style="color: #191E55">Press Releases</h1>
+      <h1 style="color: white">Press Releases</h1>
     </div>
     <div class="row flex-column">
       <div class="cards">
         <div class="card d-flex justify-content-between align-items-center">
           <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-primary m-5">See more</a>
+          <a class="btn btn-danger m-5">See more</a>
         </div>
 
         <div class="card d-flex justify-content-between align-items-center">
           <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-primary m-5">See more</a>
+          <a class="btn btn-danger m-5">See more</a>
         </div>
 
         <div class="card d-flex justify-content-between align-items-center">
           <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-primary m-5">See more</a>
+          <a class="btn btn-danger m-5">See more</a>
         </div>
 
 
       <div class="card d-flex justify-content-between align-items-center">
           <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-primary m-5">See more</a>
+          <a class="btn btn-danger m-5">See more</a>
         </div>
 
 
       <div class="card d-flex justify-content-between align-items-center">
           <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-primary m-5">See more</a>
+          <a class="btn btn-danger m-5">See more</a>
         </div>
 
 
       <div class="card d-flex justify-content-between align-items-center">
           <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-primary m-5">See more</a>
+          <a class="btn btn-danger m-5">See more</a>
         </div>
 
       <div class="card d-flex justify-content-between align-items-center">
           <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-primary m-5">See more</a>
+          <a class="btn btn-danger m-5">See more</a>
         </div>
 
       <div class="card d-flex justify-content-between align-items-center">
           <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-primary m-5">See more</a>
+          <a class="btn btn-danger m-5">See more</a>
         </div>
       </div>
 
@@ -127,7 +127,7 @@
       <h5>nchican@omacinema.com</h5>
       <br>
       <br>
-      <a class="btn btn-primary">Press kit</a>
+      <a class="btn btn-danger">Press kit</a>
     </div>
   </div>
 </section><!-- cd-section -->
