--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="row justify-content-center" style="position: absolute; bottom:5vh;">
-        <a href="#section2" class="cd-scroll-down"><i class="fas fa-chevron-down fa-3x"></i></a>
+        <a href="#section2" class="cd-scroll-down"><i class="fas fa-chevron-down bounce-1 fa-2x"></i></a>
       </div>
     </div>
   </section><!-- cd-section -->
