--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -1,8 +1,9 @@
 .home1 {
-  background-image: image-url("vue_interieur.jpg");
+  // background-image: image-url("400_finale.jpg");
   background-size: cover;
   .container {
     flex-direction: column;
+
   }
 }
 
