--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -17,11 +17,11 @@
 }
 
 
-#map1 > div.mapboxgl-control-container > div.mapboxgl-ctrl-bottom-left > div > a {
+#map > div.mapboxgl-control-container > div.mapboxgl-ctrl-bottom-left > div > a {
   background-image: none;
 }
 
 
-#map1 > div.mapboxgl-control-container > div.mapboxgl-ctrl-bottom-right {
+#map > div.mapboxgl-control-container > div.mapboxgl-ctrl-bottom-right {
   z-index: -1;
 }
