--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -43,7 +43,7 @@
           <% end %>
         <% end %>
       <% array.uniq.each do |tag| %>
-        <h2 class="mr-4 btn btn-danger"><%= link_to tag, articles_path(tag: tag) %></h2>
+        <h2 class="mr-4 btn btn-info"><%= link_to tag, articles_path(tag: tag) %></h2>
       <% end %>
       </div>
     <div class="row d-flex justify-content-center align-items-center mt-5" style=" height: 28%">
@@ -71,46 +71,46 @@
     <div class="row flex-column">
       <div class="cards">
         <div class="card d-flex justify-content-between align-items-center">
-          <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-danger m-5">See more</a>
+          <h4 class="card-title mt-5">February 2018</h4>
+          <a class="btn-primary btn m-5">See more</a>
         </div>
 
         <div class="card d-flex justify-content-between align-items-center">
-          <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-danger m-5">See more</a>
+          <h4 class="card-title mt-5">March 2018</h4>
+          <a class="btn-primary btn m-5">See more</a>
         </div>
 
         <div class="card d-flex justify-content-between align-items-center">
-          <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-danger m-5">See more</a>
+          <h4 class="card-title mt-5">July 2018</h4>
+          <a class="btn-primary btn m-5">See more</a>
         </div>
 
 
       <div class="card d-flex justify-content-between align-items-center">
-          <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-danger m-5">See more</a>
+          <h4 class="card-title mt-5">August 2018</h4>
+          <a class="btn-primary btn m-5">See more</a>
         </div>
 
 
       <div class="card d-flex justify-content-between align-items-center">
-          <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-danger m-5">See more</a>
+          <h4 class="card-title mt-5">October 2018</h4>
+          <a class="btn-primary btn m-5">See more</a>
         </div>
 
 
       <div class="card d-flex justify-content-between align-items-center">
-          <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-danger m-5">See more</a>
+          <h4 class="card-title mt-5">September 2018</h4>
+          <a class="btn-primary btn m-5">See more</a>
         </div>
 
       <div class="card d-flex justify-content-between align-items-center">
-          <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-danger m-5">See more</a>
+          <h4 class="card-title mt-5">November 2018</h4>
+          <a class="btn-primary btn m-5">See more</a>
         </div>
 
       <div class="card d-flex justify-content-between align-items-center">
-          <h4 class="card-title mt-5">Press Release 2018</h4>
-          <a class="btn btn-danger m-5">See more</a>
+          <h4 class="card-title mt-5">December 2018</h4>
+          <a class="btn-primary btn m-5">See more</a>
         </div>
       </div>
 
@@ -120,14 +120,24 @@
 
 <section id="section3" class="cd-section section3-articles">
   <div class="container d-flex justify-content-center">
-    <div class="row d-flex flex-column">
+    <div class="d-flex flex-column">
       <h1 class="pb-5">Press Info</h1>
       <h2>Contact</h2>
       <h3>Nicolas Chican</h3>
       <h5>nchican@omacinema.com</h5>
       <br>
       <br>
-      <a class="btn btn-danger">Press kit</a>
+      <a class="face-button" href="#">
+        <div class="face-primary">
+          <span class="icon fa fa-cloud"></span>
+          Press kit
+        </div>
+
+        <div class="face-secondary">
+          <span class="icon fa fa-hdd-o"></span>
+          Download
+        </div>
+      </a>
     </div>
   </div>
 </section><!-- cd-section -->
