--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -146,9 +146,7 @@
                   <ul>
                     <div class="d-flex">
                       <li class="pb-3 pt-4 d-flex">
-                        <div>
-                          <i class="fas fa-home fa-2x mr-4"></i>
-                        </div>
+                        <div id="sounding" class="fa fa-2x mr-4"></div>
                         <div>
                           <p>Immersive sound System</p>
                         </div>
@@ -157,7 +155,7 @@
                     <div>
                       <li class="pb-3 d-flex">
                         <div>
-                         <i class="fas fa-user-friends fa-2x mr-4"></i>
+                         <i class="far fa-image fa-2x mr-4"></i>
                         </div>
                         <div>
                           <p>Compatible with any type of digital image quality and sound system</p>
@@ -167,7 +165,7 @@
                     <div>
                       <li class="pb-3 d-flex">
                         <div>
-                         <i class="fas fa-glass-martini fa-2x mr-4"></i>
+                         <i class="far fa-eye fa-2x mr-4"></i>
                         </div>
                         <div>
                           <p>Optimal projection system</p>
