--- a/app/assets/stylesheets/components/_articles.scss
+++ b/app/assets/stylesheets/components/_articles.scss
@@ -17,3 +17,40 @@
   color: tomato;
 }
 
+.face-button {
+  $height: 64px;
+  $accentColor: #e43;
+
+  height: $height;
+  display: inline-block;
+  border: 3px solid $accentColor;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+  text-decoration: none;
+  color: $accentColor;
+  overflow: hidden;
+  width: 30vw;
+
+  .icon {
+    margin-right: 6px;
+  }
+
+  .face-primary,
+  .face-secondary {
+    display: block;
+    padding: 0 32px;
+    line-height: $height;
+    transition: margin .4s;
+  }
+
+  .face-primary {
+    background-color: $accentColor;
+    color: #fff;
+  }
+
+  &:hover .face-primary {
+    margin-top: -$height;
+  }
+}
