--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -1,17 +1,3 @@
-.btn-primary {
-  font-size: 1.25rem;
-  padding: 10px;
-  background-color: $blue;
-  border: 1px solid white;
-  margin-top: 30px;
-}
-
-.btn-primary:hover {
-  background-color:  white;
-  color: $blue;
-  border: 1px solid $blue;
-}
-
 .fa-chevron-down {
   color: white;
   animation-duration: 2s;
@@ -39,25 +25,29 @@
   .fa-chevron-down { position: relative; right: 26vw;}
 }
 
-.btn-danger {
-  font-size: 1.25rem !important;
-  padding: 10px;
-  font-color: tomato !important;
-  border: 1px solid tomato;
-  background-color: transparent;
-  a {
-    color: tomato;
-  }
+.btn {
+  font-size: 1.25rem;
+  border: 2px;
+  border-radius: 2px;
 }
 
-.btn-danger:hover {
-  background-color: tomato;
-  border: 1px solid tomato;
+.btn-primary {
+  background: linear-gradient(70deg,#ff4c1d,#9b0063);
+  color: $blue !important;
+}
+
+
+.btn-info {
+  background: linear-gradient(30deg,#9b0063,#ff4c1d);
   a {
     color: $blue;
   }
 }
 
-.btn {
-  font-size: 1.25rem !important;
+
+.btn:hover {
+  background: linear-gradient(70deg,#9b0063,#ff4c1d);
 }
+
+
+
