--- a/app/assets/stylesheets/components/_contact.scss
+++ b/app/assets/stylesheets/components/_contact.scss
@@ -21,3 +21,26 @@
 .email-contact {padding-left: 0px;}
 }
 
+.marker {
+  border-radius: 50% 50% 50% 50%;
+  border: 4px solid #fff;
+  width: 30px;
+  height: 30px;
+  transform: rotate(-90deg);
+}
+
+
+.marker::after {
+  position: absolute;
+  content: '';
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  margin-left: -5px;
+  margin-top: -5px;
+  background-color: #fff;
+}
+
+
